changes in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>This is going to be my Second Commit</title>
   </head>
   <body>
-
+<h1>Heloo</h1>
   </body>
 </html>
