added change in html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>This is going to be my Second Commit</title>
+    <title>This is going to be my  latest Commit</title>
   </head>
   <body>
 <h1>Heloo</h1>
